{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 103,
  "lineage": "68deca84-d8e1-8e3b-23bf-5f9de6652f5a",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:519852036875:loadbalancer/app/production-alb/d665181fe616dcc1",
            "arn_suffix": "app/production-alb/d665181fe616dcc1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "production-alb-1897862822.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:519852036875:loadbalancer/app/production-alb/d665181fe616dcc1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "production-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a5326ad228ce8da6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c72ca8333f0c9da"
              },
              {
                "subnet_id": "subnet-096357e4dc8951efc"
              }
            ],
            "subnets": [
              "subnet-00c72ca8333f0c9da",
              "subnet-096357e4dc8951efc"
            ],
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "production-alb",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "production-alb",
              "Project": "3-tier-architecture-SA"
            },
            "vpc_id": "vpc-0357c61097f534d8a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:519852036875:listener/app/production-alb/d665181fe616dcc1/35bf647e78970a7b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:519852036875:targetgroup/production-tg/afa0102ee4e5b121",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:519852036875:listener/app/production-alb/d665181fe616dcc1/35bf647e78970a7b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:519852036875:loadbalancer/app/production-alb/d665181fe616dcc1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app_alb",
            "module.alb.aws_lb_target_group.app_tg",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:519852036875:targetgroup/production-tg/afa0102ee4e5b121",
            "arn_suffix": "targetgroup/production-tg/afa0102ee4e5b121",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:519852036875:targetgroup/production-tg/afa0102ee4e5b121",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "production-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "production-tg",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "production-tg",
              "Project": "3-tier-architecture-SA"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:519852036875:targetgroup/production-tg/afa0102ee4e5b121-20240827135717882900000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:519852036875:targetgroup/production-tg/afa0102ee4e5b121",
            "target_id": "i-0ca311af082d9eabc"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.app_tg",
            "module.ec2.aws_instance.app_tier",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.app",
            "module.security_groups.aws_security_group.bastion",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_subnet.private_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:security-group/sg-0a5326ad228ce8da6",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5326ad228ce8da6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "production-alb-sg",
            "name_prefix": "",
            "owner_id": "519852036875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "production-alb-sg",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "production-alb-sg",
              "Project": "3-tier-architecture-SA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085f9c64a9b75eed5",
            "arn": "arn:aws:ec2:us-east-2:519852036875:instance/i-0ca311af082d9eabc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca311af082d9eabc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sara-3-tier",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-075cabb07ed74d2d1",
            "private_dns": "ip-10-0-3-140.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01f041c8299e912b8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcc7e23ce4f30fda",
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-app-tier-instance",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-app-tier-instance",
              "Project": "3-tier-architecture-SA"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04356725f5706105a"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.app",
            "module.security_groups.aws_security_group.bastion",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_subnet.private_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085f9c64a9b75eed5",
            "arn": "arn:aws:ec2:us-east-2:519852036875:instance/i-0782e24b56feb83a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0782e24b56feb83a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sara-3-tier",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-090b58fa63e04ca71",
            "private_dns": "ip-10-0-1-198.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.198",
            "public_dns": "ec2-3-140-197-245.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.197.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0305a4d353ea634b1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c72ca8333f0c9da",
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-bastion-host",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-bastion-host",
              "Project": "3-tier-architecture-SA"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08b26a0c21b513651"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.bastion",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085f9c64a9b75eed5",
            "arn": "arn:aws:ec2:us-east-2:519852036875:instance/i-0d22c8558b31a84fd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d22c8558b31a84fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sara-3-tier",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01e81ed9fada6e357",
            "private_dns": "ip-10-0-5-79.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ae67425a03979ac8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a4a80c27e075e1a",
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-db-tier-instance",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-db-tier-instance",
              "Project": "3-tier-architecture-SA"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04356725f5706105a"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.app",
            "module.security_groups.aws_security_group.bastion",
            "module.vpc.aws_subnet.db_subnet_1",
            "module.vpc.aws_subnet.db_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:security-group/sg-09b98f27ab4dd9b45",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b98f27ab4dd9b45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sara-alb-security-group",
            "name_prefix": "",
            "owner_id": "519852036875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-alb-security-group",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-alb-security-group",
              "Project": "3-tier-architecture-SA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:security-group/sg-04356725f5706105a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04356725f5706105a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b26a0c21b513651",
                  "sg-09b98f27ab4dd9b45"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sara-app-security-group",
            "name_prefix": "",
            "owner_id": "519852036875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-app-security-group",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-app-security-group",
              "Project": "3-tier-architecture-SA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:security-group/sg-08b26a0c21b513651",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b26a0c21b513651",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sara-bastion-security-group",
            "name_prefix": "",
            "owner_id": "519852036875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-bastion-security-group",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-bastion-security-group",
              "Project": "3-tier-architecture-SA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6132c92ea36b9c7",
            "arn": "arn:aws:ec2:us-east-2:519852036875:elastic-ip/eipalloc-0b6132c92ea36b9c7",
            "domain": "vpc",
            "id": "eipalloc-0b6132c92ea36b9c7",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-130-15-177.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.15.177",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:internet-gateway/igw-08721211e7e2d3b0b",
            "id": "igw-08721211e7e2d3b0b",
            "owner_id": "519852036875",
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-main-igw",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-main-igw",
              "Project": "3-tier-architecture-SA"
            },
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6132c92ea36b9c7",
            "association_id": "eipassoc-0ff29c11ba5ec48f2",
            "connectivity_type": "public",
            "id": "nat-0e180acd8d656d7e9",
            "network_interface_id": "eni-066555587297e51da",
            "private_ip": "10.0.1.230",
            "public_ip": "3.130.15.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00c72ca8333f0c9da",
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-main-nat-gateway",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-main-nat-gateway",
              "Project": "3-tier-architecture-SA"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:route-table/rtb-04ef33219b29785c3",
            "id": "rtb-04ef33219b29785c3",
            "owner_id": "519852036875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e180acd8d656d7e9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-db-rt",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-db-rt",
              "Project": "3-tier-architecture-SA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:route-table/rtb-051dc266141ca9dc5",
            "id": "rtb-051dc266141ca9dc5",
            "owner_id": "519852036875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e180acd8d656d7e9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-private-rt",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-private-rt",
              "Project": "3-tier-architecture-SA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:route-table/rtb-044811159baeda6d5",
            "id": "rtb-044811159baeda6d5",
            "owner_id": "519852036875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08721211e7e2d3b0b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-public-rt",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-public-rt",
              "Project": "3-tier-architecture-SA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c87dd5ac5f8ef0d",
            "route_table_id": "rtb-04ef33219b29785c3",
            "subnet_id": "subnet-07a4a80c27e075e1a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.db_rt",
            "module.vpc.aws_subnet.db_subnet_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043f2d55e832e99a8",
            "route_table_id": "rtb-04ef33219b29785c3",
            "subnet_id": "subnet-05338fa4574c7b771"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.db_rt",
            "module.vpc.aws_subnet.db_subnet_2",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d8c53bf6352ae2f",
            "route_table_id": "rtb-051dc266141ca9dc5",
            "subnet_id": "subnet-0fcc7e23ce4f30fda"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcf94a246860dbfe",
            "route_table_id": "rtb-051dc266141ca9dc5",
            "subnet_id": "subnet-0c9e34f3dbedb07f0"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_2",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078ed99b5e86c3c13",
            "route_table_id": "rtb-044811159baeda6d5",
            "subnet_id": "subnet-00c72ca8333f0c9da"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e87c7a4c1527f30d",
            "route_table_id": "rtb-044811159baeda6d5",
            "subnet_id": "subnet-096357e4dc8951efc"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:subnet/subnet-07a4a80c27e075e1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a4a80c27e075e1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "519852036875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-db-subnet-1",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-db-subnet-1",
              "Project": "3-tier-architecture-SA"
            },
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:subnet/subnet-05338fa4574c7b771",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05338fa4574c7b771",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "519852036875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-db-subnet-2",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-db-subnet-2",
              "Project": "3-tier-architecture-SA"
            },
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:subnet/subnet-0fcc7e23ce4f30fda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcc7e23ce4f30fda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "519852036875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-app-subnet-1",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-app-subnet-1",
              "Project": "3-tier-architecture-SA"
            },
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:subnet/subnet-0c9e34f3dbedb07f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9e34f3dbedb07f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "519852036875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-app-subnet-2",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-app-subnet-2",
              "Project": "3-tier-architecture-SA"
            },
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:subnet/subnet-00c72ca8333f0c9da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c72ca8333f0c9da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "519852036875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-public-subnet-1",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-public-subnet-1",
              "Project": "3-tier-architecture-SA"
            },
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:subnet/subnet-096357e4dc8951efc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096357e4dc8951efc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "519852036875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-public-subnet-2",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-public-subnet-2",
              "Project": "3-tier-architecture-SA"
            },
            "vpc_id": "vpc-0357c61097f534d8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:519852036875:vpc/vpc-0357c61097f534d8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a92be5ea87421bab",
            "default_route_table_id": "rtb-000e36b1ef3e69e1c",
            "default_security_group_id": "sg-0d14f76a15bf2cfca",
            "dhcp_options_id": "dopt-44fe332d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0357c61097f534d8a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-000e36b1ef3e69e1c",
            "owner_id": "519852036875",
            "tags": {
              "Created_BY": "saraswathy",
              "Name": "sara-vpc",
              "Project": "3-tier-architecture-SA"
            },
            "tags_all": {
              "Created_BY": "saraswathy",
              "Name": "sara-vpc",
              "Project": "3-tier-architecture-SA"
            }
          }
        }
      ]
    }
  ]
}